# medical_profile

./: .env.example  .flake8  .gitignore  .pylintrc  Dockerfile  README.md  alembic.ini  docker-compose.yml  makefile  pyproject.toml
app/: main.py
app/core/: __init__.py  logger.py  settings.py
app/enums/: __init__.py  constants.py  enums.py
app/exceptions/: __init__.py  exception_handle.py
app/models/: __init__.py  base.py  medical_record.py  patient_model.py
app/repositories/: __init__.py  patient.py
app/routers/api/: __init__.py  health.py  patient.py
app/schemas/: __init__.py  patient.py
app/services/: __init__.py  patient_service.py
migrations/versions/: 6d8075fe1049_create_patients_and_medical_record.py
