[project]
name = "medical-profile-service"
version = "0.1.0"
description = ""
authors = [
    {name = "Willians Pereira",email = "willians@4vconnect.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "email-validator (>=2.2.0,<3.0.0)",
    "coloredlogs (>=15.0.1,<16.0.0)",
    "pendulum (>=3.1.0,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "colorlog (>=6.9.0,<7.0.0)"
]

[tool.poetry]
packages = [{include = "medical_profile_service", from = "src"}]


[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.14"
black = "^25.1.0"
flake8 = "^7.3.0"
autoflake = "^2.3.1"
isort = "^6.0.1"
pylint = "^3.3.7"
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = 'app/'
exclude = "migrations/"
extend-exclude = '''
/(__pycache__|.*\.pyc)$
'''

[tool.isort]
profile = "black"
src_paths = ["app"]
skip = ["migrations/"]

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true
recursive = true
in-place = true
